--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,9 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>Maven Quick Start Archetype</name>
 	<url>http://maven.apache.org</url>
+	<properties>
+			<spring.version>4.2.2.RELEASE</spring.version>
+	</properties>
 	<build>
 		<finalName>coc</finalName>
 		<plugins>
@@ -128,7 +131,7 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
-			<version>4.2.2.RELEASE</version>
+			<version>${spring.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>javax.servlet</groupId>
@@ -170,7 +173,7 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-jdbc</artifactId>
-			<version>4.2.2.RELEASE</version>
+			<version>${spring.version}</version>
 		</dependency>
 	</dependencies>
 </project>
