--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -39,6 +39,14 @@
         <filter-name>encodingFilter</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
+    <filter>
+	  	<filter-name>cors</filter-name>
+	  	<filter-class>com.kael.coc.support.SimpleCORSFilter</filter-class>
+	</filter>
+	<filter-mapping>
+	 	 <filter-name>cors</filter-name>
+	  	<url-pattern>/*</url-pattern>
+	  </filter-mapping>
 	 <!-- Spring MVC DispatcherServlet -->
     <servlet>
         <servlet-name>springMVC3</servlet-name>
