--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	<name>Maven Quick Start Archetype</name>
 	<url>http://maven.apache.org</url>
 	<properties>
-			<spring.version>4.2.2.RELEASE</spring.version>
+		<spring.version>4.2.2.RELEASE</spring.version>
 	</properties>
 	<build>
 		<finalName>coc</finalName>
@@ -174,6 +174,16 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-jdbc</artifactId>
 			<version>${spring.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+			<version>2.6.3</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.6.3</version>
 		</dependency>
 	</dependencies>
 </project>
